--- a/packages/app-router/package.json
+++ b/packages/app-router/package.json
@@ -3,10 +3,16 @@
   "private": false,
   "version": "0.1.0",
   "description": "Next.js App Router like routing convention for pure client rendering React application",
+  "type": "module",
   "scripts": {
-    "build": "rollup -c ./rollup.config.js"
+    "clean": "rimraf ./dist",
+    "build": "pnpm clean && pnpm run \"/^build:.*/\"",
+    "build:any": "rollup -c ./rollup.config.js",
+    "build:types": "tsc -P ./tsconfig.types.json"
   },
-  "module": "./dist/index.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "typings": "./dist/types/index.d.ts",
   "files": [
     "./dist"
   ],
@@ -27,8 +33,6 @@
     "react-is": "^18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.1.3",
-    "typescript-plugin-css-modules": "^5.0.1",
     "@babel/core": "^7.22.5",
     "@babel/plugin-transform-react-constant-elements": "^7.22.5",
     "@babel/plugin-transform-runtime": "^7.22.5",
@@ -42,11 +46,14 @@
     "@types/react-is": "^18.2.1",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
-    "babel-plugin-import": "^1.13.8",
     "babel": "^6.23.0",
+    "babel-plugin-import": "^1.13.8",
+    "rimraf": "^5.0.5",
     "rollup": "^4.1.4",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0"
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "typescript": "^5.1.3",
+    "typescript-plugin-css-modules": "^5.0.1"
   }
 }
