build(app-router): update build tools' setting

--- a/packages/app-router/tsconfig.types.json
+++ b/packages/app-router/tsconfig.types.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "noEmit": false, // whether to suppress TypesScript generating code during the compilation process.
+    "removeComments": true,
     "declaration": true,
     "emitDeclarationOnly": true,
     "declarationDir": "./dist/types"
