--- a/packages/app-router/package.json
+++ b/packages/app-router/package.json
@@ -3,16 +3,17 @@
   "private": false,
   "version": "0.1.0",
   "description": "Next.js App Router like routing convention for pure client rendering React application",
-  "type": "module",
   "scripts": {
     "clean": "rimraf ./dist",
     "build": "pnpm clean && pnpm run \"/^build:.*/\"",
     "build:any": "rollup -c ./rollup.config.js",
     "build:types": "tsc -P ./tsconfig.types.json"
   },
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
+  "unpkg": "./dist/bundle.unpkg.js",
+  "module": "./dist/bundle.esm.js",
+  "main": "./dist/bundle.cjs.js",
   "typings": "./dist/types/index.d.ts",
+  "sideEffects": false,
   "files": [
     "./dist"
   ],
