--- a/packages/app-router-auth/package.json
+++ b/packages/app-router-auth/package.json
@@ -9,7 +9,6 @@
     "build:any": "rollup -c ./rollup.config.js",
     "build:types": "tsc -P ./tsconfig.types.json"
   },
-  "unpkg": "./dist/bundle.unpkg.js",
   "module": "./dist/bundle.esm.js",
   "main": "./dist/bundle.cjs.js",
   "typings": "./dist/types/index.d.ts",
@@ -29,9 +28,6 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-router-dom": "^6.14.1"
-  },
-  "dependencies": {
-    "react-is": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -56,5 +52,9 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "typescript": "^5.1.3",
     "typescript-plugin-css-modules": "^5.0.1"
+  },
+  "dependencies": {
+    "@meta-ultra/app-router": "workspace:^",
+    "react-is": "^18.2.0"
   }
 }
