--- a/packages/app-router/package.json
+++ b/packages/app-router/package.json
@@ -8,7 +8,7 @@
     "dev": "pnpm run \"/^dev:.*/\"",
     "dev:src": "rollup --watch -c ./rollup.config.js",
     "dev:types": "tsc --watch -P ./tsconfig.types.json",
-    "build": "pnpm clean && pnpm run \"/^build:.*/\"",
+    "build": "pnpm clean && cross-env NODE_ENV=production pnpm run \"/^build:.*/\"",
     "build:src": "rollup -c ./rollup.config.js",
     "build:types": "tsc -P ./tsconfig.types.json"
   },
@@ -53,11 +53,14 @@
     "@typescript-eslint/parser": "^5.59.9",
     "babel": "^6.23.0",
     "babel-plugin-import": "^1.13.8",
+    "cross-env": "^7.0.3",
     "rimraf": "^5.0.5",
     "rollup": "^4.1.4",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-uglify": "^6.0.4",
     "typescript": "^5.1.3",
     "typescript-plugin-css-modules": "^5.0.1"
   }
