--- a/packages/app-router-cli/package.json
+++ b/packages/app-router-cli/package.json
@@ -9,5 +9,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "handlebars": "^4.7.8",
+    "prettier": "^3.1.0"
+  }
 }
