--- a/packages/app-router-cli/package.json
+++ b/packages/app-router-cli/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chokidar": "^3.5.3",
     "handlebars": "^4.7.8",
+    "lodash-es": "^4.17.21",
     "prettier": "^3.1.0"
   }
 }
