--- a/packages/app-router-cli/package.json
+++ b/packages/app-router-cli/package.json
@@ -8,15 +8,17 @@
     "app-router": "./src/cli-wrapper.js"
   },
   "scripts": {
-    "dev": "node ./src/cli-wrapper.js"
+    "dev": "node ./src/cli-wrapper.js -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^5.3.0",
     "chokidar": "^3.5.3",
     "handlebars": "^4.7.8",
     "lodash-es": "^4.17.21",
+    "meow": "^12.1.1",
     "prettier": "^3.1.0"
   }
 }
