feat(app-router-cli): add nested route segment feature

--- a/packages/app-router-cli/package.json
+++ b/packages/app-router-cli/package.json
@@ -8,7 +8,7 @@
     "app-router": "./src/cli-wrapper.js"
   },
   "scripts": {
-    "dev": "node ./src/cli-wrapper.js -w"
+    "dev": "node ./src/cli-wrapper.js -s ./logs/app -o ./logs/router.tsx"
   },
   "keywords": [],
   "author": "",
