--- a/packages/app-router-cli/package.json
+++ b/packages/app-router-cli/package.json
@@ -1,18 +1,33 @@
 {
   "name": "@meta-ultra/app-router-cli",
   "version": "0.1.0",
-  "description": "",
+  "description": "A program for generating router configuration abiding by Next.js App Router",
+  "author": "John Huang <fsjohnhuang@hotmail.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:meta-ultra/app-router.git"
+  },
+  "bugs": "https://github.com/meta-ultra/app-router/issues",
+  "homepage": "https://github.com/meta-ultra/app-router/tree/main/packages/app-router-cli",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "type": "module",
   "main": "./src/core/index.js",
   "bin": {
     "app-router": "./src/cli-wrapper.js"
   },
+  "preferGlobal": true,
   "scripts": {
     "dev": "node ./src/cli-wrapper.js -s ./logs/app -o ./logs/router.tsx"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "react",
+    "react-router",
+    "cli",
+    "app router"
+  ],
   "dependencies": {
     "chalk": "^5.3.0",
     "chokidar": "^3.5.3",
