--- a/packages/app-router-cli/package.json
+++ b/packages/app-router-cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@meta-ultra/app-router-cli",
-  "version": "0.1.0",
-  "description": "A program for generating router configuration abiding by Next.js App Router",
+  "version": "0.2.0",
+  "description": "A program for generating router configuration abiding by Next.js App Router.",
   "author": "John Huang <fsjohnhuang@hotmail.com>",
   "license": "MIT",
   "repository": {
@@ -33,9 +33,11 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "chokidar": "^3.5.3",
+    "cli-welcome": "^2.2.2",
     "handlebars": "^4.7.8",
     "lodash-es": "^4.17.21",
     "meow": "^12.1.1",
+    "ora": "^7.0.1",
     "prettier": "^3.1.0"
   },
   "devDependencies": {
