build(app-router-cli): update the building script for template pre-compilation

--- a/packages/app-router-cli/package.json
+++ b/packages/app-router-cli/package.json
@@ -21,7 +21,7 @@
   "preferGlobal": true,
   "scripts": {
     "dev": "node ./src/cli-wrapper.js -s ./logs/app -o ./logs/router.tsx",
-    "precompile": "handlebars ./src/templates -e hbs -f ./src/templates/precompiled.js -k each -k if",
+    "precompile": "node ./scripts/precompile.js",
     "build": "rimraf ./dist && ncc build ./src/cli-wrapper.js -o dist -m"
   },
   "keywords": [
