--- a/packages/app-router-cli/package.json
+++ b/packages/app-router-cli/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "dev": "node ./src/cli-wrapper.js -s ./logs/app -o ./logs/router.tsx",
     "precompile": "node ./scripts/precompile.js",
-    "build": "rimraf ./dist && ncc build ./src/cli-wrapper.js -o dist -m"
+    "build": "rimraf ./dist && node ./scripts/build.js"
   },
   "keywords": [
     "react",
@@ -41,7 +41,8 @@
     "prettier": "^3.1.0"
   },
   "devDependencies": {
-    "ncc": "^0.3.6",
-    "rimraf": "^5.0.5"
+    "@vercel/ncc": "^0.38.1",
+    "rimraf": "^5.0.5",
+    "uglify-js": "^3.17.4"
   }
 }
