chore(app-router): add publish config

--- a/packages/app-router/package.json
+++ b/packages/app-router/package.json
@@ -20,6 +20,10 @@
   "files": [
     "./dist"
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "keywords": [
     "next.js",
     "react",
