chore: add publish config

--- a/packages/app-router-auth/package.json
+++ b/packages/app-router-auth/package.json
@@ -28,6 +28,10 @@
   ],
   "author": "fsjohnhuang",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "peerDependencies": {
     "react": "^18.2.0",
     "react-router-dom": "^6.14.1"
