--- a/packages/app-router-cli/package.json
+++ b/packages/app-router-cli/package.json
@@ -19,6 +19,10 @@
     "app-router": "./dist/index.js"
   },
   "preferGlobal": true,
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "dev": "node ./src/cli-wrapper.js -s ./logs/app -o ./logs/router.tsx",
     "precompile": "node ./scripts/precompile.js",
