feat(app-router): update intercepting routes

--- a/packages/app-router/examples/package.json
+++ b/packages/app-router/examples/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "core-js": "^3.33.3",
     "core-js-pure": "^3.33.3",
+    "path-browserify": "^1.0.1",
     "react-dom": "^18.2.0"
   }
 }
