--- a/packages/app-router/package.json
+++ b/packages/app-router/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "lodash-es": "^4.17.21",
+    "path-browserify": "^1.0.1",
     "react-is": "^18.2.0"
   },
   "devDependencies": {
