--- a/packages/app-router-cli/package.json
+++ b/packages/app-router-cli/package.json
@@ -24,7 +24,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
-    "dev": "node ./src/cli-wrapper.js -s ./logs/app -o ./logs/router.tsx",
+    "dev": "node ./src/cli-wrapper.js -s ./test/basic-routes/app -o ./test/basic-routes/router.js",
     "precompile": "node ./scripts/precompile.js",
     "build": "rimraf ./dist && node ./scripts/precompile.js && node ./scripts/build.js",
     "test": "jest"
