--- a/packages/app-router-cli/package.json
+++ b/packages/app-router-cli/package.json
@@ -35,6 +35,7 @@
     "app router"
   ],
   "dependencies": {
+    "cac": "^6.7.14",
     "chalk": "^5.3.0",
     "chokidar": "^3.5.3",
     "cli-welcome": "^2.2.2",
