--- a/packages/app-router/package.json
+++ b/packages/app-router/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@meta-ultra/app-router",
   "private": false,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Next.js App Router like routing convention for pure client rendering React application",
   "scripts": {
     "clean": "rimraf ./dist",
@@ -41,7 +41,8 @@
     "axios-mock-adapter": "^1.22.0",
     "lodash-es": "^4.17.21",
     "path-to-regexp": "^6.2.1",
-    "react-is": "^18.2.0"
+    "react-is": "^18.2.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
