--- a/packages/app-router/package.json
+++ b/packages/app-router/package.json
@@ -35,14 +35,14 @@
   "license": "MIT",
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "yup": "^1.3.3",
+    "axios-mock-adapter": "^1.22.0"
   },
   "dependencies": {
-    "axios-mock-adapter": "^1.22.0",
     "lodash-es": "^4.17.21",
     "path-to-regexp": "^6.2.1",
-    "react-is": "^18.2.0",
-    "yup": "^1.3.3"
+    "react-is": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
