--- a/packages/app-router/package.json
+++ b/packages/app-router/package.json
@@ -34,14 +34,15 @@
   "author": "fsjohnhuang",
   "license": "MIT",
   "peerDependencies": {
+    "axios-mock-adapter": "^1.22.0",
     "react": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "yup": "^1.3.3",
-    "axios-mock-adapter": "^1.22.0"
+    "yup": "^1.3.3"
   },
   "dependencies": {
     "lodash-es": "^4.17.21",
     "path-to-regexp": "^6.2.1",
+    "qs": "^6.11.2",
     "react-is": "^18.2.0"
   },
   "devDependencies": {
@@ -54,6 +55,7 @@
     "@babel/runtime-corejs3": "^7.22.5",
     "@types/lodash-es": "^4.17.11",
     "@types/node": "^20.2.5",
+    "@types/qs": "^6.9.11",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.5",
     "@types/react-is": "^18.2.1",
